--- a/index.html
+++ b/index.html
@@ -17,6 +17,29 @@
 </head>
 
 <body>
+  <div id="navbar">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6 text-left ">
+          <img src="pic_mountain.jpg" alt="Mountain View" style="width:140px;height:60px">
+        </div>
+
+        <div class="col-xs-6 ">
+          <ul class="list-inline">
+            <li>
+              <a href="#produit" class="btn btn-default" role="button">Produit</a>
+            </li>
+            <li>
+              <a href="#description" class="btn btn-default" role="button">Informations</a>
+            </li>
+            <li>
+              <a href="#contact" class="btn btn-default" role="button">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Banner -->
     <div class="text-center">
@@ -76,7 +99,7 @@
     <h2>Contactez notre équipe</h2>
     <p>Laissez vos coordonnées et nous vous rappelerons</p>
     <form action="">
-      <input type='email' placeholder='alan@turing.org'>
+      <input type='email' placeholder='thewolf@genève.org'>
       <input type='submit' value='Apply' class='btn btn-primary'>
 
     </form>
