--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <p>Café grand crus</p>
         <p>Du bonheur pour tous le monde</p>
         <br>
-        <a href="#map" class="btn btn-primary btn-lg">Contacter Kavus</a>
+        <a href="#contact" class="btn btn-primary btn-lg">Contacter Kavus</a>
       </div>
     </div>
   </div>
 
   <div class="bg-blue text-padded">
-    <div class="container text-center">
+    <div class="container text-center", id="produit">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
           <div class="card">
@@ -96,14 +96,25 @@
   <!-- Form -->
 
   <div class="card text-center text-padded", id="contact">
-    <h2>Contactez notre équipe</h2>
-    <p>Laissez vos coordonnées et nous vous rappelerons</p>
-    <form action="">
-      <input type='email' placeholder='thewolf@genève.org'>
-      <input type='submit' value='Apply' class='btn btn-primary'>
-
-    </form>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6 ">
+          <h2>Contactez notre équipe</h2>
+          <p>Laissez vos coordonnées et nous vous rappelerons</p>
+          <form action="">
+            <input type='email' placeholder='thewolf@genève.org'>
+            <input type='submit' value='Apply' class='btn btn-primary'>
+            </form>
+        </div>
+        <div class="col-xs-6">
+          <h2>Coordonnées</h2>
+          <p>01 49 00 00 98</p>
+          <p>contact@kavus.fr</p>
+        </div>
+      </div>
+    </div>
   </div>
+
   <!-- Map -->
   <div id="map" style="width: 100%; height: 400px;"></div>
 
